// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse and 1`] = `
Array [
  Object {
    "courses": Array [
      Object {
        "classId": 2500,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2510,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2511,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 3500,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
    ],
    "type": "AND",
  },
]
`;

exports[`parse and and or 1`] = `
Array [
  Object {
    "courses": Array [
      Object {
        "classId": 2500,
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "subject": "CS",
        "type": "COURSE",
      },
    ],
    "type": "OR",
  },
  Object {
    "courses": Array [
      Object {
        "classId": 2500,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2510,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2511,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 3500,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
    ],
    "type": "AND",
  },
]
`;
